Applying spotless and fixing some warnings
pom changes and annotations-on-same-line are all spotless.
Other changes are based on warnings in IDE (deprecations and sonar warnings)